--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^20.10.5",
-		"typescript": "^5.3.3"
+		"typescript": "^5.3.3",
+		"vitest": "^1.0.4"
 	}
 }
