--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
 	"version": "1.0.0",
 	"main": "index.js",
 	"license": "MIT",
+	"scripts": {
+		"test": "vitest run",
+		"test:watch": "vitest"
+	},
 	"devDependencies": {
 		"@types/node": "^20.10.5",
 		"typescript": "^5.3.3",
