--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
 	"license": "MIT",
 	"scripts": {
 		"test": "vitest run",
-		"test:watch": "vitest"
+		"test:watch": "vitest",
+		"lint": "eslint src --ext .ts",
+		"lint:fix": "eslint src --ext .ts --fix"
 	},
 	"devDependencies": {
 		"@types/node": "^20.10.5",
+		"@typescript-eslint/eslint-plugin": "^6.15.0",
+		"@typescript-eslint/parser": "^6.15.0",
+		"eslint": "^8.56.0",
 		"typescript": "^5.3.3",
 		"vite-tsconfig-paths": "^4.2.2",
 		"vitest": "^1.0.4"
