--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,8 @@
 		"quotes": ["error", "single"],
 		"semi": ["error", "always"],
 		"@typescript-eslint/ban-types": "off",
-		"@typescript-eslint/no-explicit-any": "warn"
+		"@typescript-eslint/no-explicit-any": "warn",
+		"no-useless-constructor": "off",
+		"no-new": "off"
 	}
 }
